@@ -14,7 +14,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
 import javax.json.JsonArray;
 import javax.json.JsonObject;
 import javax.json.JsonValue;
@@ -36,7 +35,7 @@ public class RespondentsMapper {
         }
         List<PartyDetails> respondentList = respondents.stream()
             .map(Element::getValue)
-            .collect(Collectors.toList());
+            .toList();
         AtomicInteger counter = new AtomicInteger(1);
         return respondentList.stream().map(respondent -> getRespondent(counter, respondent,
                                                                        respondentSolicitorMap
